issue #479: make page overflow hidden to prevent frequent auto-sizing of SmartGWT's Layout in Firefox

--- a/proarc-webapp/src/main/webapp/Editor.css
+++ b/proarc-webapp/src/main/webapp/Editor.css
@@ -1,5 +1,6 @@
 /** Add css rules here for your application. */
 
+html, body { overflow:hidden }
 #loadingWrapper {
     position: absolute;
     top: 40%;
